src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>ActualDurationfromSA__c</fullName>
        <description>Cumulative field that sums up the duration for all SAs</description>
        <inlineHelpText>Cumulative field that sums up the duration for all SAs</inlineHelpText>
        <label>Actual Duration from SA (in Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetSerialNumber__c</fullName>
        <description>Formula to expose the serial number of the asset on Work Order</description>
        <formula>Asset.SerialNumber</formula>
        <label>Asset Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CannotCompleteReason__c</fullName>
        <description>This field will be filled out by field service technicians if they didn&apos;t complete a service appointment</description>
        <label>Cannot Complete Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Parts</fullName>
                </value>
                <value>
                    <fullName>Waiting Technical Help</fullName>
                </value>
                <value>
                    <fullName>Waiting Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DescribeWhatHasBeenDone__c</fullName>
        <label>Describe what has been done</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERPJSONVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ERPJSON Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERPOrderNumber__c</fullName>
        <description>The ERP Number from ERP - populated by integration based on Audit Logs in AX</description>
        <label>ERP Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPOrderStatus__c</fullName>
        <description>Shows the status of the order in ERP - comes from the integration from Audit Logs in AX</description>
        <label>ERP Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPReturnMessage__c</fullName>
        <description>Will show the return message from ERP from the integrations. Can show both success messages as well as Error messages. Info Comes from Audit Logs in AX.</description>
        <label>ERP Return Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Account phone number, mainly to expose it to Contractor portal</description>
        <formula>Account.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchedulingPriorityDS__c</fullName>
        <description>it represents/reflects the priority to be in numbers</description>
        <formula>CASE(TEXT(Priority), &apos;Business Crititcal&apos;, 1 ,&apos;Customer Critical&apos; ,1,&apos;High&apos;,2 ,&apos;Normal&apos;, 3,&apos;Medium&apos;,3,&apos;Low&apos;,4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority (DS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SendToERPDate__c</fullName>
        <label>Send To ERP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <description>Used to describe the service code based on AX Service Types</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ServiceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CIM Record updated through the Case</description>
        <label>Source Record</label>
        <referenceTo>Source_Record__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TF_AccountCountry__c</fullName>
        <description>Technical Field that will be used in Entitlement Processes to define milestone criteria</description>
        <formula>Case.Account_Country__c</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Status_equals_closed</fullName>
        <active>true</active>
        <description>This validation rule will be used to prevent partner users marking the status as Closed, however they should only be able to complete it.</description>
        <errorConditionFormula>AND(
				 OwnerId &lt;&gt; $User.Id,
     ISCHANGED(Status),
     ISPICKVAL(Status, &quot;Closed&quot;)
   )</errorConditionFormula>
        <errorMessage>Only work order owner can close this</errorMessage>
    </validationRules>
</CustomObject>